[package]
name = "sample-graph-api"
version = "0.6.0"
edition = "2021"
authors = ["Robert Yin <bobertoin@gmail.com>"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.70"
axum = "0.6.16"
genius-rust = "0.1.1"
http = "0.2.9"
petgraph ={ version = "0.6.3", features = ["serde-1"] }
redis = { version = "0.23.0", features = ["tls"] }
semver = "1.0.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["buffer", "limit"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing-subscriber = "0.3.17"
