[package]
name = "sample-graph-api"
version = "0.8.0"
edition = "2021"
authors = ["Robert Yin <bobertoin@gmail.com>"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
async-trait = "0.1.68"
axum = "0.6.16"
clap = { version = "4.2.5", features = ["derive"] }
genius-rust = "0.1.1"
http = "0.2.9"
petgraph ={ version = "0.6.3", features = ["serde-1"] }
semver = "1.0.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
redis = { version = "0.23.0", features = ["tls"] }
redis-test = "0.2.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["buffer", "limit"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing-subscriber = "0.3.17"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
rstest = "0.17.0"
